Creating a sample form

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         Javascript Practice
     </header>
 
-    <script src="main.js">
-
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
