--- a/Form.html
+++ b/Form.html
@@ -8,13 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Sample Form</header>
+    <main>
+        <div class="header">
+            <header>
+                Registeration Form 
+            </header>
 
-    <section class="container">
-        div
+        </div>
 
-    </section>
+        <section class="container">
+            <div class="myForm">
+                <form action="mailto: aashray81@icloud.com">
+                    Name:
+                    <input type="text" placeholder="Name" >
+                </form>
+            </div>
 
+        </section>
+    </main>
     <script src="form.js"></script>
 </body>
 </html>
