Fix typo in header text

--- a/Form.html
+++ b/Form.html
@@ -11,7 +11,7 @@
     <main id="Page">
         <div class="header">
             <header>
-                <h4>Facebook Registeration Form</h4> 
+                <h4>Facebook Registration Form</h4> 
             </header>
 
         </div>
